openshift/templates/backup-artifacts/passthrough-test-project/route-with-passthroug.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2020-05-30T17:47:52Z"
    labels:
      app: spring-boot-s2i-app
    name: spring-boot-s2i-app-passthrough
    namespace: passthrough-test
    resourceVersion: "1429218"
    selfLink: /apis/route.openshift.io/v1/namespaces/passthrough-test/routes/spring-boot-s2i-app-passthrough
    uid: afb33db9-a29d-11ea-a6e8-0a580a810002
  spec:
    host: spring-boot-s2i-app-passthrough.apps.cluster-nyc-42e2.nyc-42e2.example.opentlc.com
    port:
      targetPort: 8443-8443
    subdomain: ""
    tls:
      termination: passthrough
    to:
      kind: Service
      name: spring-boot-s2i-app
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2020-05-30T17:47:53Z"
        status: "True"
        type: Admitted
      host: spring-boot-s2i-app-passthrough.apps.cluster-nyc-42e2.nyc-42e2.example.opentlc.com
      routerCanonicalHostname: apps.cluster-nyc-42e2.nyc-42e2.example.opentlc.com
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
